--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -27,8 +27,6 @@
 
 				<p>Wouldn't it be nice if there was one place for all that information? Now, there is.</p>
 
-
-
 				<p>With GoodCloud, all of your nonprofit's core information has one home, accessible from anywhere. Even better, the information is actually <i>connected</i>. If you've ever wondered how many of your volunteers are also donors, you can now have that answer. </p>
 
 				<p>If you've ever struggled with who has the latest version of a volunteer list, you can leave that headache behind. With GoodCloud, all of your lists are kept up to date in real-time.  We don't like headaches. We figure you don't either.</p>
@@ -108,7 +106,7 @@
 				<div class="title">No lock-in.</div>
 				<div class="description png_bg identical_height_block">
 					<p>GoodCloud is a monthly subscription. No set-up fees, no cancellation fees, no lock-in.  We've also made it easy to get your data in and out.</p>
-					<p>Our thinking is simple - we want to provide the best solution for small nonprofits, at the lowest cost. If we're not the best and cheapest, we hope you go somewhere else.</p>
+					Our thinking is simple - we want to provide the best solution for small nonprofits, at the lowest cost. If we're not the best and cheapest, we hope you go somewhere else.
 				</div>
 			</div>
 
@@ -184,7 +182,7 @@
 			<div class="feature shield">
 				<div class="title">We even backup the backups.</div>
 				<div class="description png_bg identical_height_block">
-					<p>We maintain constant backups of everything in GoodCloud, 24/7.  That includes multiple backups outside our datacenter, ready for a worst-case scenario.  When it comes to keeping your data safe, we don't take any chances, or cut any corners.</p>
+					<p>We maintain constant backups of everything in GoodCloud, 24/7.  That includes multiple secure offsite backups, ready for a worst-case scenario.  When it comes to keeping your data safe, we don't take any chances, or cut any corners.</p>
 				</div>
 			</div>
 
