--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -14,7 +14,7 @@
 
 			<div class="title">We &hearts; nonprofits.</div>
 			<div class="description png_bg identical_height_block">
-				We've been staff, donors, and volunteers. We care deeply about your mission. We're here to help you flourish.
+				We've been staff, volunteers, and donors. We care deeply about your mission, and we're here to help you flourish.
 			</div>
 			<div class="action"><a href="{% url marketing_site:about_us %}">Learn about our mission!</a></div>
 		</div>
