--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -3,7 +3,9 @@
 {% block title %}Tour - watch GoodCloud in action, and hear what motivates our team!{% endblock %}
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 {% block javascript %}{{block.super}}
+{% js "js/contrib/galleria/galleria-1.2.4.js" %}
 {% js "js/contrib/galleria/themes/classic/galleria.classic.min.js" %}
+
 <script>
     $('#screenshot_gallery').galleria({
         width: "70%",
@@ -39,67 +41,67 @@
 		<div id="screenshot_gallery">
 			<img src="{% media_url "images/screenshots/top_search.jpg" %}" 				title="Quick-search from anywhere in GoodCloud"	alt="The search bar looks in your people, organizations, groups, and spreadsheets. And it's fast - updating instantaneously as you type!" />
 			<span class="hidden">
-				<caption>Quick-search from anywhere in GoodCloud: The search bar looks in your people, organizations, groups, and spreadsheets. And it's fast - updating instantaneously as you type!"</caption>
+				<span class="caption">Quick-search from anywhere in GoodCloud: The search bar looks in your people, organizations, groups, and spreadsheets. And it's fast - updating instantaneously as you type!"</span>
 			</span>
 			<img src="{% media_url "images/screenshots/person_view.jpg" %}" 			title="Viewing a person"	alt="No rows and columns here. We've laid out the screens to look like the things you'd expect - addresses actually look like addresses." />
 			<span class="hidden">
-				<caption>Viewing a person: No rows and columns here. We've laid out the screens to look like the things you'd expect - addresses actually look like addresses."</caption>
+				<span class="caption">Viewing a person: No rows and columns here. We've laid out the screens to look like the things you'd expect - addresses actually look like addresses."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/person_edit.jpg" %}" 			title="Edit an address"	alt="We've tried to make everything as simple as possible.  Simply make your changes - GoodCloud saves them automatically in the background." />
 			<span class="hidden">
-				<caption>Edit an address: We've tried to make everything as simple as possible.  Simply make your changes - GoodCloud saves them automatically in the background."</caption>
+				<span class="caption">Edit an address: We've tried to make everything as simple as possible.  Simply make your changes - GoodCloud saves them automatically in the background."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/add_donation.jpg" %}" 			title="Adding a donation"	alt="Simple and easy to add donations." />
 			<span class="hidden">
-				<caption>Adding a donation: Simple and easy to add donations."</caption>
+				<span class="caption">Adding a donation: Simple and easy to add donations."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/add_volunteer_hours.jpg" %}" 	title="Adding volunteer hours" alt="Adding hours for volunteers couldn't get much simpler." />
 			<span class="hidden">
-				<caption>Adding volunteer hours" alt="Adding hours for volunteers couldn't get much simpler."</caption>
+				<span class="caption">Adding volunteer hours" alt="Adding hours for volunteers couldn't get much simpler."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/add_volunteer_hours_with_calendar.jpg" %}" 	title="Built-in calendars"	alt="No more glancing for the calendar - it's built into all of the dates in GoodCloud." />
 			<span class="hidden">
-				<caption>Built-in calendars: No more glancing for the calendar - it's built into all of the dates in GoodCloud."</caption>
+				<span class="caption">Built-in calendars: No more glancing for the calendar - it's built into all of the dates in GoodCloud."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/person_tags.jpg" %}" 			title="Tags for a person"	alt="One-click to categorize your people in GoodCloud, using the tags that make sense for your nonprofit." />
 			<span class="hidden">
-				<caption>Tags for a person: One-click to categorize your people in GoodCloud, using the tags that make sense for your nonprofit."</caption>
+				<span class="caption">Tags for a person: One-click to categorize your people in GoodCloud, using the tags that make sense for your nonprofit."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/manage_tags_view.jpg" %}" 		title="Manage Tags"	alt="Tags have been built to be fast, easy, and flexible - to match your organization's needs." />
 			<span class="hidden">
-				<caption>Manage Tags: Tags have been built to be fast, easy, and flexible - to match your organization's needs."</caption>
+				<span class="caption">Manage Tags: Tags have been built to be fast, easy, and flexible - to match your organization's needs."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/manage_tags_edit.jpg" %}" 		title="Manage Tags"	alt="Easily create the categories and tags that fit your mission" />
 			<span class="hidden">
-				<caption>Manage Tags: Easily create the categories and tags that fit your mission"</caption>
+				<span class="caption">Manage Tags: Easily create the categories and tags that fit your mission"</span>
 			</span>
 			<img src="{% media_url "images/screenshots/groups_search.jpg" %}" 			title="Groups list"	alt="Your groups are saved and continually updated - ready when you need them." />
 			<span class="hidden">
-				<caption>Groups list: Your groups are saved and continually updated - ready when you need them."</caption>
+				<span class="caption">Groups list: Your groups are saved and continually updated - ready when you need them."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/group_view.jpg" %}" 				title="Viewing a group"	alt="Groups keep themselves up-to-date, automatically." />
 			<span class="hidden">
-				<caption>Viewing a group: Groups keep themselves up-to-date, automatically."</caption>
+				<span class="caption">Viewing a group: Groups keep themselves up-to-date, automatically."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/group_edit.jpg" %}" 				title="Editing a group"	alt="It's easy to make groups of people from any criteria in GoodCloud" />
 			<span class="hidden">
-				<caption>Editing a group: It's easy to make groups of people from any criteria in GoodCloud"</caption>
+				<span class="caption">Editing a group: It's easy to make groups of people from any criteria in GoodCloud"</span>
 			</span>
 			<img src="{% media_url "images/screenshots/spreadsheet_view.jpg" %}" 		title="View and download a spreadsheet"	alt="Downloading the latest mailing list is one click. Simple." />
 			<span class="hidden">
-				<caption>View and download a spreadsheet: Downloading the latest mailing list is one click. Simple."</caption>
+				<span class="caption">View and download a spreadsheet: Downloading the latest mailing list is one click. Simple."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/spreadsheet_edit.jpg" %}" 		title="Editing a spreadsheet"	alt="We've built-in the most commmon templates for spreadsheets - setting up a spreadsheet is a few quick clicks." />
 			<span class="hidden">
-				<caption>Editing a spreadsheet: We've built-in the most commmon templates for spreadsheets - setting up a spreadsheet is a few quick clicks."</caption>
+				<span class="caption">Editing a spreadsheet: We've built-in the most commmon templates for spreadsheets - setting up a spreadsheet is a few quick clicks."</span>
 			</span>
 			<img src="{% media_url "images/screenshots/spreadsheet_email.jpg" %}" 		title="Email lists made easy"	alt="For the email template, we included a quick-copy box, so you can just copy and paste into your mailing list software, email program, or anything else!" />
 			<span class="hidden">
-				<caption>Email lists made easy: For the email template, we included a quick-copy box, so you can just copy and paste into your mailing list software, email program, or anything else!"</caption>
+				<span class="caption">Email lists made easy: For the email template, we included a quick-copy box, so you can just copy and paste into your mailing list software, email program, or anything else!"</span>
 			</span>
 			<img src="{% media_url "images/screenshots/accounts.jpg" %}" 				title="Accounts" alt="Add an unlimited number of staff and volunteer accounts." />
 			<span class="hidden">
-				<caption>Accounts: Add an unlimited number of staff and volunteer accounts."</caption>
+				<span class="caption">Accounts: Add an unlimited number of staff and volunteer accounts."</span>
 			</span>
 		</div>
 
