trying galleria in the head.

--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -2,7 +2,7 @@
 {% load i18n generic_fields friendly_data_formatting  %}
 {% block title %}Tour - watch GoodCloud in action, and hear what motivates our team!{% endblock %}
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
-{% block javascript %}{{block.super}}
+{% block base_js %}{{block.super}}
 {% js "js/contrib/galleria/galleria-1.2.4.js" %}
 {% js "js/contrib/galleria/themes/classic/galleria.classic.min.js" %}
 <script>
