--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -3,8 +3,8 @@
 {% block title %}Tour - watch GoodCloud in action, and hear what motivates our team!{% endblock %}
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 {% block base_js %}{{block.super}}
-<script src="{{MEDIA_URL}}js/contrib/galleria/galleria-1.2.4.js" />
-<script src="{{MEDIA_URL}}js/contrib/galleria/themes/classic/galleria.classic.min.js" />
+<script src="{{MANUAL_MEDIA_URL}}js/contrib/galleria/galleria-1.2.4.js" />
+<script src="{{MANUAL_MEDIA_URL}}js/contrib/galleria/themes/classic/galleria.classic.min.js" />
 <script>
 $(function(){
     $('#screenshot_gallery').galleria({
