trying to set width manually

--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -8,7 +8,7 @@
 <script>
 $(function(){
     $('#screenshot_gallery').galleria({
-        width: "70%",
+        width: $(document).width() * 0.7 * 0.66,
         height: 600,
         imageMargin: 40,
     });
