fix for galleria - split to a different page

--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -18,8 +18,8 @@
 	</td>
 	<td>
 		<a href="{% url marketing_site:tour %}" class="top_link" >Tour</a>
-		<a href="{% url marketing_site:tour %}#video_tour">Video Tour</a>
-		<a href="{% url marketing_site:tour %}#pictures_and_words">Screenshots</a>
+		<a href="{% url marketing_site:tour %}">Video Tour</a>
+		<a href="{% url marketing_site:screenshots %}">Screenshots</a>
 	</td>
 	<td>
 		<a href="{% url marketing_site:legal %}" class="top_link" >Legal</a>
