blog tweaks, PSD save

--- a/mycelium/apps/email_list/templates/email_list/blog_posterous.html
+++ b/mycelium/apps/email_list/templates/email_list/blog_posterous.html
@@ -11,19 +11,19 @@
   <meta name="description" content="Here's our story, every day as we build the world's best software for small nonprofits. We keep you up-to-date with news around the nonprofit world as well!">
   <meta name="author" content="GoodCloud - Software for Nonprofits">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/images/favicon.png">
+  <link rel="shortcut icon" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/images/favicon.png">
   <link rel="apple-touch-icon" href="https://s3.amazonaws.com/goodcloud1/apple-touch-icon.png">
 
   
-<link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/style.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/main.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/mycelium_elements.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/marketing_site.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/contrib/1140/1140.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/login.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/signup.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/style.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/main.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/mycelium_elements.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/marketing_site.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/contrib/1140/1140.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/login.css" type="text/css" media="screen, projection"> <link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/signup.css" type="text/css" media="screen, projection">
 
-<!--[if lte IE 9]><link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/css/contrib/1140/ie.css" type="text/css" media="screen, projection">
+<!--[if lte IE 9]><link rel="stylesheet" href="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/css/contrib/1140/ie.css" type="text/css" media="screen, projection">
 <style type="text/css">
 	#footer {display:block; position: relative;}
 </style>
 <![endif]-->
 
-  <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/lib/modernizr-1.6.min.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/contrib/jquery-1.4.3.min.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/contrib/jquery-ui.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/contrib/jquery.django.csrf.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/plugins.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/script.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/contrib/jquery.autogrow.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/contrib/jquery.ba-bbq.min.js"></script>
+  <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/lib/modernizr-1.6.min.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/contrib/jquery-1.4.3.min.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/contrib/jquery-ui.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/contrib/jquery.django.csrf.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/plugins.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/script.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/contrib/jquery.autogrow.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/contrib/jquery.ba-bbq.min.js"></script>
 
 <style type="text/css">
 * {
@@ -231,9 +231,9 @@ h4 {
 }
 
 .post {
-    float: right;
+    font-size: 15px;
     position: relative;
-    width: 500px;
+    width: 90%;
 }
 
 .post p, .post div {
@@ -391,7 +391,7 @@ p.private-post {
 }
 
 .search-section, .tag-section, .archive-section {
-    margin-left: 160px;
+    margin-left: 0px;
     padding: 20px 20px 5px 20px;
 }
 .search-section h2, .tag-section h2, .archive-section h2 {
@@ -609,29 +609,14 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
 	<a id="logo" href="/" class="png_bg">
 		
 	</a>
-	<div id="main_nav"><a href='https://www.agoodcloud.com/about-us' class=' ' >Our Mission</a><a href='https://www.agoodcloud.com/features' class=' ' >Features</a><a href='https://www.agoodcloud.com/tour' class=' ' >Tour</a><a href='https://www.agoodcloud.com/pricing' class='current ' >Pricing</a><a href='https://www.agoodcloud.com/blog/' class=' ' >Newsletter</a><a href='https://www.agoodcloud.com/signup' class=' ' >Sign Up</a></div>
+	<div id="main_nav"><a href='https://www.agoodcloud.com/about-us' class=' ' >Our Mission</a><a href='https://www.agoodcloud.com/features' class=' ' >Features</a><a href='https://www.agoodcloud.com/tour' class=' ' >Tour</a><a href='https://www.agoodcloud.com/pricing' >Pricing</a><a href='https://www.agoodcloud.com/blog/'  class='current ' >Blog</a><a href='https://www.agoodcloud.com/signup' class=' ' >Sign Up</a></div>
 </div>
 
 <div id="wrap">
 	<div class="page_header">Real people, real voices.</div>
 
 	<div class="page_content_body">
-	
-
-    <div class="header {block:HeaderImage}{Else}header_text{/block:HeaderImage}" style="z-index: 10 !important;">
-        <div class="content">
-            {block:PosterousBar direction="right" translucent="true"}{/block:PosterousBar}        
-            
-            {block:HeaderImage}
-                <div class="content" style="padding-bottom: 20px; padding-top: 30px;">
-                    <a href="{SiteURL}"><img src="{HeaderImageURL-500}" alt="{Title}"></a>
-                </div>
-            {Else}
-                <h1 style="z-index: 11 !important;; position: absolute; bottom: -5px; right: 110px; text-align: right;"><a href="{SiteURL}">{Title}</a></h1>
-                <h1 style="z-index: 1 !important; position: absolute; bottom: -6px; right: 110px; text-align: right;"><a href="{SiteURL}" style="color: #aaa">{Title}</a></h1>
-            {/block:HeaderImage}            
-        </div>
-    </div><!-- /.header -->
+	{block:PosterousBar direction="left" translucent="true"}{/block:PosterousBar}        
 
 {block:HasPages}
   <ul class="navigation">
@@ -704,27 +689,14 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
                 {/block:EditBox}
 
                 <div id="post_control_{PostID}"></div>
-                <div class="info-column">
-                  {block:ShowOrList}
-                    <div class="date">{block:NewDayDate}<a href="{Permalink}"><span class="date-day">{ShortMonth} {DayOfMonth}</a> / {12Hour}:{Minutes}{AmPm}{/block:NewDayDate}</a></div>
-                    {/block:ShowOrList}
-                        {block:Private}
-                            <p class="private-post">
-                                <a href="{Permalink}" class="tooltip_link"><img src="/images/icons/lock12.png" width='12' height='12' alt='Private'/>
-                                    <span>
-                                        <b>Private Post</b><br/>
-                                        This post has a secret URL and not linked on your public blog. Send the secret URL to share it with anyone.
-                                    </span>
-                                </a>
-                            </p>
-                        {/block:Private}
-    
-                </div>
-                <div id="post_{PostID}" class="post">
+
+                <div id="post_{PostID}" class="post blog_post">
                         {block:Title}<h2 id="posttitle_{PostID}"><a href="{Permalink}">{Title}</a></h2>{/block:Title}
                         {block:SMS}
                             <div class="sms_notice">Posted from my mobile phone (SMS)</div>
                         {/block:SMS}
+
+						<div class="date">{block:NewDayDate}<a href="{Permalink}"><span class="date-day">{ShortMonth} {DayOfMonth}{/block:NewDayDate}</a></div>
 
                         {block:Author}
                             <div class="posted_by">
@@ -817,7 +789,7 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
                 
                 {block:AutopostSites}
                   <div class="sidebar-block">
-                      <h5>My Other Sites</h5>
+                      <h5>We're also on</h5>
                       {ProfileExternalLinks}
                   </div>
                 {/block:AutopostSites}
@@ -825,7 +797,7 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
                 <div class="sidebar-block" style="margin-top:20px;">
                     {block:Contributors}
                         <div class="contributors">
-                            <h5>Contributors</h5>
+                            <h5>People</h5>
     
                             <ul class="contribs">
                                 {block:Contributor}
@@ -903,7 +875,7 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
         </div>
 
                 <div class="sidebar-block">   
-          <h5>Get Updates</h5>
+          <h5>Keep Updated</h5>
                   <div class="subscribe-site">
             {block:Subscription}{/block:Subscription}
          </div>
@@ -923,7 +895,7 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
 
 
 
-	</div>
+	
 
 	<div class="clearfix"></div>
 	<div id="footer">
@@ -972,12 +944,12 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
 
 
 <!--[if lt IE 7 ]>
-  <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/lib/dd_belatedpng.js"></script>
+  <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/lib/dd_belatedpng.js"></script>
   <script>DD_belatedPNG.fix('img, .png_bg');</script>
 <![endif]-->
 
-<script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/lib/preloadCssImages.jQuery.mycelium.js"></script>
-<script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/mycelium/marketing_site.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/mycelium/signup.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/651a5f7166c073a4f7d1ce5272297f7ae3d1b435/js/mycelium/marketing_tabs.js"></script>
+<script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/lib/preloadCssImages.jQuery.mycelium.js"></script>
+<script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/mycelium/marketing_site.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/mycelium/signup.js"></script> <script src="https://s3.amazonaws.com/goodcloud1/d6639d62ae62eca3ba55dfa61ff2848799862dc5/js/mycelium/marketing_tabs.js"></script>
 
 </body>
 
