--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -5,6 +5,7 @@
 {% generic_field_css %}
 {% css "/css/people_volunteer.css" %}
 {% css "/css/people_donor.css" %}
+{% css "/css/people_conversations.css" %}
 {% css "/css/people_tags.css" %}
 {% endblock %}
 {% block javascript %}{{block.super}}
